--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-grid-layout": "^2.2.2",
+    "react-icons": "^5.5.0",
+    "react-resizable": "^3.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
